[project]
name = "linkwatch"
authors = [{ name = "DogFortune" }]
description = "Perform connectivity checks on URLs listed in the Markdown"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
version = "0.0.1"
dependencies = ["tqdm", "dataclasses-json"]

[project.scripts]
linkwatch = "src.app:main"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
